--- a/index.html
+++ b/index.html
@@ -9,31 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="card">
-            <p class="hp">
-                <span>HP</span>80</p>
-                <img src="https://www.nicepng.com/png/full/99-991854_bulbasaur-transparent-image-bulbasaur-transparent.png">
-                <h2 class="poke-name">Sample Name</h2>
-                <div class="types">
-                    <span>type 1</span>
-                    <span>type 2</span>
-                </div>
-                <div class="stats">
-                    <div>
-                        <h3>60</h3>
-                        <p>Attack</p>
-                    </div>
-                    <div>
-                        <h3>60</h3>
-                        <p>Defense</p>
-                    </div>
-                    <div>
-                        <h3>60</h3>
-                        <p>Speed</p>
-                    </div>
-                </div>
-            </p>
-        </div>
+        <div id="card"></div>
         <button id="btn">Generate</button>
     </div>
     <script src="app.js"></script>
